# aws-sns-utils

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  Makefile  README.rst  pyproject.toml  pytest.ini
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
aws_sns_utils/: client.py  exceptions.py
tests/: conftest.py  test_client.py  test_not_to_break_ci.py
