[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 110
target-version = ["py37"]

[tool.isort]
line_length = 110
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_localfolder = "tests,aws_sns_utils"
sections = "FUTURE,STDLIB,THIRDPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"

[tool.poetry]
name = "aws_sns_utils"
version = "0.1.0"
description = "A library that will help you to handle operations in AWS sns with a friendly API."
authors = ["Olist Developers <developers@olist.com>"]
url = "aws-sns-utils"
keywords = [ "olist", "aws", "sns", "boto3", "botocore", "aiobotocore"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries",
]
exclude = [ "docs", "tests*"]
include = ["*.rst", "*.txt", "*.py", "*.png", "*.dot", "Makefile"]

[tool.poetry.dependencies]
python = "^3.7"
aiobotocore = {version = "*", extras = ["boto3"]}
json-encoder = "*"
cached-property = "*"

[tool.poetry.dev-dependencies]
asynctest = "*"
coverage = "*"
ipython = "*"
pre-commit = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cache = "*"
pytest-cov = "*"
pytest-deadfixtures = "*"
pytest-randomly = "*"
pytest-timeout = "*"
pytest-xdist  = "*"
